--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "strapi",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
+    "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
@@ -18,16 +22,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
+    "shopify-api-node": "^3.14.0",
     "styled-components": "^5.3.11"
-  },
-  "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "35d7a084-3088-4d0b-869e-f503693ee8e5"
   },
   "engines": {
     "node": "20"
   },
-  "license": "MIT"
+  "strapi": {
+    "uuid": "35d7a084-3088-4d0b-869e-f503693ee8e5"
+  }
 }
