--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
     "shopify-api-node": "^3.14.0",
+    "strapi-plugin-import-export-entries": "^1.23.1",
     "styled-components": "^5.3.11"
   },
   "engines": {
