--- a/package.json
+++ b/package.json
@@ -11,20 +11,35 @@
     "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "test": "jest --forceExit"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      ".tmp",
+      ".cache"
+    ]
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.23.1",
     "@strapi/plugin-users-permissions": "4.23.1",
     "@strapi/provider-upload-cloudinary": "4.23.1",
     "@strapi/strapi": "4.23.1",
+    "@strapi/typescript-utils": "^4.25.10",
+    "better-sqlite3": "^11.3.0",
     "pg": "8.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
-    "shopify-api-node": "^3.14.0",
     "strapi-plugin-import-export-entries": "^1.23.1",
     "styled-components": "^5.3.11"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.0.0"
   },
   "engines": {
     "node": "20"
